[package]
name = "hako-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aws-config = "0.3"
aws-sdk-s3 = "0.3"
futures-util = "0.3"
jrsonnet-evaluator = "0.4"
listenfd = "0.3"
prost = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net"] }
tokio-stream = { version = "0.1", default-features = false, features = ["net"] }
tonic = "0.6"
tower = "0.4"
tower-http = { version = "0.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[build-dependencies]
tonic-build = "0.6"
